Refactoring of using text log. There no more random request to it.

--- a/Jenkins2SkypeMsg/Jenkins2SkypeMsg.csproj
+++ b/Jenkins2SkypeMsg/Jenkins2SkypeMsg.csproj
@@ -72,6 +72,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="files\config.xsd">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="jobs.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
