Updated config examples, fixing minor bugs.

--- a/Jenkins2SkypeMsg/jobs.config
+++ b/Jenkins2SkypeMsg/jobs.config
@@ -5,13 +5,13 @@
       <ciUri name="buildFlow" url="https://ci.jenkins-ci.org/view/Jenkins%20core/job/jenkins_main_trunk/" timeout="10" />
       <messenger type="skype" chatId="echo123" />
       <notifications>
-        <buildStatusCnahged enabled="true" messageSend="true" topicChange="false">
+        <buildStatusChanged enabled="true" messageSend="true" topicChange="false">
           <status type="success" topic="Build green" message="/me (sun) - build #{1} was {0}" participantMsg=" special thanks to {1}" />
-          <status type="unstable" topic="BUILD RED" message="/me (rain) - build #{1} was {0}" participantMsg=" after {0} {1}" logMsg="at step: {0}" />
-          <status type="failure" topic="BUILD RED" message="/me (rain) - build #{1} was {0}" participantMsg=" after {0} {1}" logMsg="at step: {0}" />
+          <status type="unstable" topic="BUILD RED" message="/me (rain) - build #{1} was {0}" participantMsg=" after {0} {1}" />
+          <status type="failure" topic="BUILD RED" message="/me (rain) - build #{1} was {0}" participantMsg=" after {0} {1}" />
           <status type="aborted" topicChange="false" message="/me (talktothehand) - pssst I think someone {0} build" participantMsg=", and this is someone is {1}" />
-        </buildStatusCnahged>
-        <buildStillRed enabled="true" type="unstable,failure" message="/me (tumbleweed) - sorry, but build #{1} still {0}" subJobChangedMsg=" where {0}" participantMsg=" after push of {0}" />
+        </buildStatusChanged>
+        <buildStillRed enabled="true" type="unstable,failure" message="/me (tumbleweed) - sorry, but build #{1} still {0}" participantMsg=" after push of {0}" />
         <buildFrozen enabled="true" timeout="3000" message="/me (o) Perhaps build flow job is frozen? Build #{0} duration more than expected, about {1} minutes" />
       </notifications>
     </job>
